# qwarm-gnn-rl

./: .gitignore  LICENSE  README.md  pyproject.toml  verify_demo_claims.py
.github/workflows/: ci.yml
demo_agents/: cold_25x25_s0.pt  cold_25x25_s1.pt  cold_25x25_s2.pt  cold_25x25_s3.pt  cold_25x25_s4.pt  cold_50x50.pt  cold_50x50_s1.pt  cold_50x50_s2.pt  cold_50x50_s3.pt  cold_50x50_s4.pt  manifest.json  warm_25x25_s0.pt  warm_25x25_s1.pt  warm_25x25_s2.pt  warm_25x25_s3.pt  warm_25x25_s4.pt  warm_50x50.pt  warm_50x50_s1.pt  warm_50x50_s2.pt  warm_50x50_s3.pt  warm_50x50_s4.pt
demo_app/: server.py
demo_app/static/: index.html
runs/: demo_source_ablation_partial.json  eval_reachability_audit.json  sweep_phase3_final.json  sweep_phase3_traced.json
runs/fleet_1779277545_seed42/: fleet_results.json
scripts/: audit_eval_reachability.py  cell_watchdog.py  run_demo.py  run_demo_source_ablation.py  run_multi_seed_warm_vs_cold.py  run_shaping_control.py  run_sweep_50x50.py
tests/: conftest.py  test_batch_infer.py  test_demo_app_server.py  test_demo_diversity.py  test_demo_smoke.py  test_dynamic_graph.py  test_expert_library.py  test_expert_library_mix.py  test_expert_replay_buffer.py  test_faithful_qaoa.py  test_fleet_benchmark.py  test_gnn_dqn.py  test_gpu_utilization.py  test_offline.py  test_oracle_pool.py  test_oracles.py  test_path_evaluator.py  test_pathfinding_env.py  test_pyg_adapter.py  test_reasonable_goal_reach.py  test_reward_shaping.py  test_reward_variants.py  test_smoke_pipeline.py  test_tabular_q.py  test_transfer_benchmark.py  test_utils.py
(+51 files in other folders)
