[project]
name = "qwarm-rl"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
    "numpy>=2.0,<3",
    "scipy>=1.13,<2",
    "pandas>=2.2,<3",
    "matplotlib>=3.9,<4",
    "plotly>=5.24,<6",
    "torch>=2.4,<3",
    "torch-geometric>=2.6,<3",
    "networkx>=3.3,<4",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "rich>=13.8",
    "pydantic>=2.9,<3",
    "fastapi>=0.137.0",
    "uvicorn[standard]>=0.46.0",
]

[project.optional-dependencies]
qiskit_backend = ["qiskit>=1.0,<2", "qiskit-aer>=0.13"]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.6",
    "mypy>=1.11",
    "hypothesis>=6.112",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qwarm"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: marks tests as slow (deselect with -m 'not slow')"]
